# tg_mira_send_leads

./: .gitignore  Dockerfile  pyproject.toml
data_base/: __init__.py  db_connect.py
models/: __init__.py  users.py
send_leads/: main.py
